light/dark mode + fix mineur

--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ header {
   align-items: center;
   transition: all 0.2s; }
   .social-container p {
-    padding: 0 0 0 20px; }
+    padding: 0 0 0 10px; }
   .social-container:hover {
     background: var(--border); }
     .social-container:hover i {
@@ -141,7 +141,7 @@ header {
     width: 50%;
     height: 50%;
     text-align: center;
-    padding: 0.2em 2em; }
+    padding: 0.2em 1em; }
     @media (max-width: 767px) {
       .container .exp-container {
         width: auto;
@@ -155,7 +155,7 @@ header {
   background: linear-gradient(to left, var(--light), var(--background), var(--primary)); }
 
 .block {
-  padding: 0 40px;
+  padding: 0 20px;
   margin-bottom: 2rem; }
   .block .stars-container {
     display: flex;
